fix: fixes the way cards are displayed on mobile

--- a/_sass/custom/home-page-cards.scss
+++ b/_sass/custom/home-page-cards.scss
@@ -150,10 +150,6 @@
   }
 
   @media (max-width: 1278px) {
-    .card {
-      max-width: 32.5%;
-    }
-
     .card.guide, .card.lab {
       max-width: 100%;
       max-height: unset;
